# fluxrepo-update

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  coverage.md  output.md  usage.md
src/: cli.rs  lib.rs  main.rs  models.rs  resolvers.rs  scanner.rs  updater.rs
src/fluxrepo_update/: cli.py  models.py  resolvers.py  scanner.py  updater.py
tests/: conftest.py  repo_hygiene.rs  rust_cli.rs  rust_resolvers.rs  rust_scanner.rs  rust_updater.rs  test_cli.py  test_resolvers.py  test_scanner.py  test_updater.py
tests/common/: mod.rs
tests/fixtures/kubeflux/apps/base/audiobookshelf/: release.yaml
tests/fixtures/kubeflux/apps/base/paperless-ngx/: release.yaml
tests/fixtures/kubeflux/apps/base/smokeping/: deployment.yaml
tests/fixtures/kubeflux/apps/base/sonarr/: deployment.yaml
tests/fixtures/kubeflux/apps/production/: uptimekuma-values.yaml
tests/fixtures/kubeflux/apps/production/audiobookshelf/: release-patch.yaml
tests/fixtures/kubeflux/apps/production/immich/: release-patch.yaml
tests/fixtures/kubeflux/apps/production/openssh/: deployment.yaml
tests/fixtures/kubeflux/apps/production/paperless/: release-patch.yaml
tests/fixtures/kubeflux/clusters/production/flux-system/: gotk-sync.yaml
tests/fixtures/kubeflux/infrastructure/base/sources/: truecharts.yaml
