[package]
name = "fluxrepo-update"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "CLI tooling for discovering and updating FluxCD manifest versions"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"

[lib]
name = "fluxrepo_update"
path = "src/lib.rs"

[[bin]]
name = "fluxrepo-update"
path = "src/main.rs"
